// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gmQKSa"
          id="otherLoanAmountField"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value="test"
        />
        <span
          class="sc-fKFyDc dRAhM"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-fodVxV hgqELn"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gmQKSa"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych*"
          required=""
          type="text"
          value=""
        />
        <span
          class="sc-fKFyDc dRAhM"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV hgqELn"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value=""
        />
        <span
          class="sc-fKFyDc dRAhM"
        >
          PLN
        </span>
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
